--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "bin": "index.js",
+  "bin": {
+    "g-vite": "bin/g-vite.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@vue/compiler-sfc": "^3.2.39",
-    "chalk": "4",
-    "koa": "^2.13.4",
-    "koa-send": "^5.0.1"
+  "devDependencies": {
+    "chalk": "^4.1.2"
   }
 }
