--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "chalk": "^4.1.2",
-    "connect": "^3.7.0"
+    "connect": "^3.7.0",
+    "serve-static": "^2.2.0"
   }
 }
