--- a/example/package.json
+++ b/example/package.json
@@ -4,15 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "g-vite",
+    "build": "g-vite build",
+    "preview": "g-vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "vue": "^3.2.37"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^3.1.0",
-    "vite": "^3.1.0"
   }
 }
