--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "chalk": "^4.1.2",
     "connect": "^3.7.0",
+    "esbuild": "^0.25.5",
+    "fs-extra": "^11.3.0",
+    "resolve": "^1.22.10",
     "serve-static": "^2.2.0"
   }
 }
