--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "devDependencies": {
     "chalk": "^4.1.2",
     "connect": "^3.7.0",
+    "es-module-lexer": "^1.7.0",
     "esbuild": "^0.25.5",
     "fs-extra": "^11.3.0",
+    "magic-string": "^0.30.17",
     "resolve": "^1.22.10",
     "serve-static": "^2.2.0"
   }
