--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "magic-string": "^0.30.17",
     "resolve": "^1.22.10",
     "serve-static": "^2.2.0"
+  },
+  "dependencies": {
+    "vue": "^3.5.16"
   }
 }
