--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "serve-static": "^2.2.0"
   },
   "dependencies": {
+    "dedent": "^1.6.0",
     "hash-sum": "^2.0.0",
     "vue": "^3.5.16"
   }
