--- a/package.json
+++ b/package.json
@@ -1,32 +1,8 @@
 {
-  "name": "g-vite",
-  "version": "1.0.0",
-  "description": "",
-  "main": "lib/cli.js",
-  "bin": {
-    "g-vite": "bin/g-vite.js"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "root",
+  "private": true,
+  "dependencies": {},
   "devDependencies": {
-    "chalk": "^4.1.2",
-    "chokidar": "^4.0.3",
-    "connect": "^3.7.0",
-    "es-module-lexer": "^1.7.0",
-    "esbuild": "^0.25.5",
-    "fs-extra": "^11.3.0",
-    "magic-string": "^0.30.17",
-    "resolve": "^1.22.10",
-    "serve-static": "^2.2.0",
-    "ws": "^8.18.2"
-  },
-  "dependencies": {
-    "dedent": "^1.6.0",
-    "hash-sum": "^2.0.0",
-    "vue": "^3.5.16"
+    "lerna": "^8.2.2"
   }
 }
