feat(create-gvite): 实现配置命令

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -25,5 +25,11 @@
   },
   "bugs": {
     "url": "https://github.com/lotosv2010/g-vite/issues"
+  },
+  "dependencies": {
+    "@g-vite/settings": "workspace:^",
+    "@g-vite/utils": "workspace:^",
+    "fs-extra": "^11.3.0",
+    "userhome": "^1.0.1"
   }
 }
