--- a/packages/gvite/package.json
+++ b/packages/gvite/package.json
@@ -29,5 +29,9 @@
   },
   "bugs": {
     "url": "https://github.com/lotosv2010/g-vite/issues"
+  },
+  "dependencies": {
+    "@g-vite/config": "workspace:^",
+    "yargs": "^17.7.2"
   }
 }
