--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -28,6 +28,9 @@
   },
   "dependencies": {
     "@g-vite/settings": "workspace:^",
-    "@g-vite/utils": "workspace:^"
+    "@g-vite/utils": "workspace:^",
+    "@inquirer/prompts": "^7.5.3",
+    "chalk": "^4.1.2",
+    "fs-extra": "^11.3.0"
   }
 }
