--- a/packages/gvite/package.json
+++ b/packages/gvite/package.json
@@ -15,7 +15,8 @@
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "lib",
+    "bin"
   ],
   "publishConfig": {
     "registry": "http://localhost:4873"
