--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -35,6 +35,7 @@
     "@g-vite/utils": "workspace:^",
     "@inquirer/prompts": "^7.5.3",
     "chalk": "^4.1.2",
+    "execa": "^9.6.0",
     "fs-extra": "^11.3.0"
   }
 }
